<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MoPub Sample App</string>
    <string name="keywords">Keywords (optional)</string>
    <string name="user_data_keywords">User Data Keywords (optional)</string>
    <string name="custom_data">Custom Data (optional)</string>
    <string name="load_ad">Load Ad</string>
    <string name="refresh_ad">Refresh Ad</string>
    <string name="switch_layout">Switch Layout</string>
    <string name="show_ad">Show Ad</string>
    <string name="native_icon_image">native_icon_image</string>
    <string name="native_main_image">native_main_image</string>
    <string name="native_privacy_information_icon_image">Privacy Information Icon image</string>
    <string name="learn_more">Learn More</string>
    <string name="save">Save Ad Unit</string>
    <string name="ad_unit_id">Ad Unit Id:</string>
    <string name="ad_unit_hint">Enter Ad Unit Id</string>
    <string name="ad_unit_name">Name:</string>
    <string name="ad_unit_name_hint">Enter Name</string>
    <string name="ad_type">Ad Type:</string>
    <string name="add_ad_unit_title">Add an Ad Unit</string>
    <string name="add_ad_unit_button">Add an Ad Unit</string>
    <string name="ad_unit_id_banner">b195f8dd8ded45fe847ad89ed1d016da</string>
    <string name="ad_unit_id_mrect">252412d5e9364a05ab77d9396346d73d</string>
    <string name="ad_unit_id_leaderboard">a8919cca19784497872ae69d48f678e1</string>
    <string name="ad_unit_id_interstitial">24534e1901884e398f1253216226017e</string>
    <string name="ad_unit_id_rewarded_video">920b6145fb1546cf8b5cf2ac34638bb7</string>
    <string name="ad_unit_id_rewarded_rich_media">a96ae2ef41d44822af45c6328c4e1eb1</string>
    <string name="ad_unit_id_native">11a17b188668469fb0412708c3d16813</string>
    <string name="swipe_text"><![CDATA[< Swipe Left & Right >]]></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MoPub Sample App</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="consent_whitelisted">Consent changed to Potentially whitelisted</string>
    <string name="consent_denied">Consent changed to Denied</string>
    <string name="close">Close</string>
    <string name="no_network_adapters_found">No network adapters found</string>
    <string name="mopub_logo_descr">Mopub logo</string>
    <string name="consent_change_status">Consent change status</string>
    <string name="donottrack_text">Do Not Track is on</string>
    <string name="api_endpoint">API ENDPOINT</string>
    <string name="production">Production</string>
    <string name="staging">Staging</string>
    <string name="privacy">PRIVACY</string>
    <string name="information">Information</string>
    <string name="grant_consent">Grant Consent</string>
    <string name="revoke_consent">Revoke Consent</string>
    <string name="force_gdpr_applicable">Force GDPR Applicable</string>
    <string name="info">INFO</string>
    <string name="network_adapters">Network Adapters</string>
    <string name="pim_is_not_available">getPersonalInformationManager() returned null</string>
    <string name="list_fragment_not_found">Can\'t find MoPubListFragment.</string>
</resources>
