<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textDirection="locale">

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:singleLine="true"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ad_unit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingStart="8dp"
        android:singleLine="true"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="14sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/keywords_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/keywords"
        android:imeOptions="actionDone"
        android:inputType="text|textFilter|textShortMessage"
        android:singleLine="true" />

    <EditText
        android:id="@+id/user_data_keywords_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_data_keywords"
        android:imeOptions="actionDone"
        android:inputType="text|textFilter|textShortMessage"
        android:singleLine="true" />

    <EditText
        android:id="@+id/custom_data_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/custom_data"
        android:imeOptions="actionDone"
        android:inputType="text|textFilter|textShortMessage"
        android:singleLine="true"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/load_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/load_ad" />

        <Button
            android:id="@+id/show_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show_ad" />
    </LinearLayout>
</LinearLayout>
